# nextjs-rspc-edgedb

api/: .env  Cargo.toml
api/src/: main.rs
api/src/middleware/: mod.rs
api/src/router/: auth.rs  blogs.rs  mod.rs
api/src/service/: auth.rs  blogs.rs  user.rs  users.rs
dbschema/: default.esdl
dbschema/migrations/: 00001-m1mxvnn.edgeql  00002-m1gkqwj.edgeql  00003-m1w4kei.edgeql  00004-m1ci6ns.edgeql  00005-m1cslzg.edgeql  00006-m1ctgry.edgeql  00007-m1njye5.edgeql  00008-m1of5xe.edgeql
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/auth/: layout.tsx
web/src/app/auth/login/: login-form.tsx  page.tsx
web/src/app/auth/register/: page.tsx  register-form.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/components/: logout-button.tsx  session-list.tsx
web/src/lib/: api.ts  auth.ts  format-iso-date.ts
