[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rspc = { version = "1.0.0-rc.5", features = ["axum", "unstable"] }
specta = { git = 'https://github.com/oscartbeaumont/specta.git', rev = "ca8151f16e6fc0fd3a18bef1a1fd35f481f9588f", default-features = false, features = [
  "typescript",
] }
httpz = "0.0.6"
axum = { version = "0.6.20", features = ["ws", "http2"] }
tokio = { version = "1.33.0", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
], default-features = false }
tower-http = { version = "0.4.4", default-features = false, features = [
  "cors",
] }
tower = "0.4.13"
cookie = "0.17.0"
futures = "0.3.28"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.3", features = ["v4"] }
bcrypt = "0.15.1"
edgedb-tokio = "0.5.0"
edgedb-protocol = "0.6.0"
edgedb-derive = "0.5.1"

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "ca8151f16e6fc0fd3a18bef1a1fd35f481f9588f" }
